[gd_scene load_steps=14 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/saat.webp" type="Texture" id=2]
[ext_resource path="res://resimler/gorev_popup.webp" type="Texture" id=3]
[ext_resource path="res://resimler/question_mark.webp" type="Texture" id=4]
[ext_resource path="res://resimler/gorev_asama_bar_alt.webp" type="Texture" id=5]
[ext_resource path="res://resimler/gorev_asama_bar_progress.webp" type="Texture" id=6]
[ext_resource path="res://resimler/itemFrame_cerceve_gorev.webp" type="Texture" id=7]
[ext_resource path="res://sceneler/tali_sahneler/GorevPopup.gd" type="Script" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 8.0871, 0, 411.913, 528 )
margin_left = 49.0
margin_right = 66.0
margin_top = 94.0
margin_bottom = 106.0

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0.0627451, 0.00392157, 0.00392157, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_size = 2
outline_color = Color( 0.0627451, 0.00392157, 0.00392157, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="GorevPopup" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.5
margin_top = -294.0
margin_right = 235.5
margin_bottom = 294.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )

[node name="DikeyBolucu" type="VBoxContainer" parent="."]
anchor_left = 0.017
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = 60.0
margin_right = -65.0
margin_bottom = -75.0
custom_constants/separation = 34
alignment = 1

[node name="Ust" type="HBoxContainer" parent="DikeyBolucu"]
margin_right = 356.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="CenterContainer" type="CenterContainer" parent="DikeyBolucu/Ust"]
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="GorevIsmi" type="Label" parent="DikeyBolucu/Ust"]
margin_left = 12.0
margin_top = 5.0
margin_right = 233.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Journey Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="DikeyBolucu/Ust"]
margin_left = 245.0
margin_right = 245.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="SaatOrtalayici" type="CenterContainer" parent="DikeyBolucu/Ust"]
margin_left = 257.0
margin_right = 298.0
margin_bottom = 41.0

[node name="Saat" type="TextureRect" parent="DikeyBolucu/Ust/SaatOrtalayici"]
margin_right = 41.0
margin_bottom = 41.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalanSure" type="Label" parent="DikeyBolucu/Ust"]
margin_left = 310.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="DikeyBolucu/Ust"]
margin_left = 356.0
margin_right = 356.0
margin_bottom = 41.0
size_flags_horizontal = 3

[node name="AsamaOrtalayici" type="CenterContainer" parent="DikeyBolucu"]
margin_top = 75.0
margin_right = 356.0
margin_bottom = 105.0

[node name="GorevAsama" type="TextureProgress" parent="DikeyBolucu/AsamaOrtalayici"]
margin_left = 68.0
margin_right = 288.0
margin_bottom = 30.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GorevAsamaYazisi2" type="Label" parent="DikeyBolucu/AsamaOrtalayici/GorevAsama"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -18.0
margin_right = 24.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "2/4"

[node name="Aciklama" type="Label" parent="DikeyBolucu"]
margin_top = 139.0
margin_right = 356.0
margin_bottom = 349.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OdulOrtalayici" type="CenterContainer" parent="DikeyBolucu"]
margin_top = 383.0
margin_right = 356.0
margin_bottom = 419.0

[node name="Odul" type="Label" parent="DikeyBolucu/OdulOrtalayici"]
margin_left = 112.0
margin_right = 244.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.47451, 0.921569, 0.996078, 1 )
custom_fonts/font = SubResource( 4 )
text = "Reward:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CerceveOrtalayici" type="CenterContainer" parent="DikeyBolucu"]
margin_top = 453.0
margin_right = 356.0
margin_bottom = 453.0

[node name="EsyaKonteyner" type="HBoxContainer" parent="DikeyBolucu/CerceveOrtalayici"]
margin_left = 178.0
margin_right = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="Cerceve" type="TextureRect" parent="DikeyBolucu/CerceveOrtalayici/EsyaKonteyner"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esya" type="TextureRect" parent="DikeyBolucu/CerceveOrtalayici/EsyaKonteyner/Cerceve"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="yuzde" type="Label" parent="DikeyBolucu/CerceveOrtalayici/EsyaKonteyner/Cerceve/Esya"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
text = "% 20"
align = 1

[connection signal="popup_hide" from="." to="." method="_on_GorevPopup_popup_hide"]
